--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,7 +4,7 @@
 
 #root {
   background-color: rgba(0, 0, 0, 0.2);
-  height: 1000px;
+  height: 100vw;
   width: 100%;
   display: flex; }
   #root button {
