--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,7 +4,7 @@
 }
 #root{
     background-color: rgba($color: #000000, $alpha: 0.2);
-    height: 1000px;
+    height: 100vw;
     width: 100%;
     display: flex;
     button{
